Ensure vertical tabs are visible within deleted regions
Because we show tabs as red dotted lines, on a red background it
can be hard to see.  Use the heavier black dotted lines when the
tab is within either a whitespace error region or within a deleted
character region of a line.

--- a/gerrit-prettify/src/main/resources/com/google/gerrit/prettify/client/gerrit.css
+++ b/gerrit-prettify/src/main/resources/com/google/gerrit/prettify/client/gerrit.css
@@ -37,7 +37,8 @@
  * error.  For these we want the whitespace error to take precedence
  * so we have to override the contained style.
  */
-.wse .vt {
+.wse .vt,
+.wdd .vt {
   border-left: 2px dotted black;
 }
 .wse .wdd {
